<resources>
    <string name="app_name">AndroidSettings</string>
    <string name="action_settings">Settings</string>

    <!--CheckBox Preference -->
    <string name="pref_checkbox_title">Check Box</string>
    <string name="pref_checkbox_key" translatable="false">pref_checkbox</string>
    <string name="pref_checkbox_default" translatable="false">true</string>

    <!--EditText Preference -->
    <string name="pref_EditText_title">Edit Text</string>
    <string name="pref_EditText_key" translatable="false">pref_editText</string>
    <string name="pref_EditText_default" translatable="false">No value</string>

    <!-- ListPreference -->
    <string name="pref_ListPref_title">List Preference</string>
    <string name="pref_ListPref_key" translatable="false">pref_ListPref</string>
    <string name="pref_ListPref_default" translatable="false">0</string>

    <string name="listOption_yes" translatable="false">Yes</string>
    <string name="listOption_no" translatable="false">No</string>

    <string name="listValue_yes" translatable="false">1</string>
    <string name="listValue_no" translatable="false">0</string>

    <string name="title_activity_settings">SettingsActivity</string>

</resources>
