<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/pref_checkbox_key"
        android:title="@string/pref_checkbox_title"
        android:defaultValue="@string/pref_checkbox_default"
        />
    <EditTextPreference
        android:key="@string/pref_EditText_key"
        android:title="@string/pref_EditText_title"
        android:defaultValue="@string/pref_EditText_default"
        />
    <ListPreference
        android:key="@string/pref_ListPref_key"
        android:title="@string/pref_ListPref_title"
        android:defaultValue="@string/pref_ListPref_default"
        android:entries="@array/listPref_entries"
        android:entryValues="@array/listPref_values"
        />
</PreferenceScreen>